Velcro test First SandBox/src/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <description>Overall goals, objectives, and challenges for penetrating an account.</description>
    <fields>
        <fullName>Account_Goals__c</fullName>
        <label>Account Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_SBU__c</fullName>
        <formula>TEXT(Account__r.SBU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Growth__c</fullName>
        <formula>Current_FYTD_Sales__c / Plan_FY_Account_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N60000001PRP8EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>At_Risk_Business__c</fullName>
        <label>At Risk Business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Business_Issues__c</fullName>
        <inlineHelpText>Please list 4-5 Issues specific to this Account</inlineHelpText>
        <label>Critical Business Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CurrentYearObjectives__c</fullName>
        <label>Current Year Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_FYTD_Sales__c</fullName>
        <formula>Account__r.Actual_YTD_Net_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FYTD Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Growth_Amount_total__c</fullName>
        <label>Growth Amount total</label>
        <summarizedField>GrowthInitiative__c.Growth_Amount_Total__c</summarizedField>
        <summaryForeignKey>GrowthInitiative__c.Reward__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Growth_Risk_Delta__c</fullName>
        <formula>Growth_Amount_total__c + Risk_Amount_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth/Risk Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Client_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Client Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N60000001PRPAEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_FY_Account_Sales__c</fullName>
        <formula>Account__r.Previous_FY_YTD_Net_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last FY Account Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Product_Sales__c</fullName>
        <label>Last FY Product Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Services_Sales__c</fullName>
        <label>Last FY Services Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Revision__c</fullName>
        <label>Last Plan Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Longterm_Objectives__c</fullName>
        <label>Longterm Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>CreatedBy.Manager.LastName</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanYr_Text__c</fullName>
        <formula>TEXT( Planning_Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlanYr Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Check__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Account_Budget__c</fullName>
        <formula>Account__r.Gross_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan FY Account Sales Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Product_Sales_Goal__c</fullName>
        <label>Plan FY Product Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Services_Sales_Goal__c</fullName>
        <label>Plan FY Services Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Flag__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Plan Flag</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>Owner:User.Alias &amp; &quot;-&quot; &amp;  Account__r.Name &amp; &quot;-&quot; &amp;  PlanYr_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_Year__c</fullName>
        <label>Planning Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY2016</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>FY2017</fullName>
                </value>
                <value>
                    <fullName>FY2018</fullName>
                </value>
                <value>
                    <fullName>FY2019</fullName>
                </value>
                <value>
                    <fullName>FY2020</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sales_Growth__c</fullName>
        <formula>IF ( Last_FY_Product_Sales__c = 0, 1 ,  (  Plan_FY_Product_Sales_Goal__c -  Last_FY_Product_Sales__c ) /  Last_FY_Product_Sales__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Risk_Amount_total__c</fullName>
        <label>Risk Amount total</label>
        <summarizedField>Risk_Items_for_Plan_Year__c.Risk_Amount_Normalized__c</summarizedField>
        <summaryForeignKey>Risk_Items_for_Plan_Year__c.Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Growth__c</fullName>
        <formula>IF (  Last_FY_Services_Sales__c = 0 , 1, (  Plan_FY_Services_Sales_Goal__c  -  Last_FY_Services_Sales__c  )  /  Last_FY_Services_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>300</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <label>Threats</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year_2_Objectives__c</fullName>
        <label>Year 2 Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year_3_Objectives__c</fullName>
        <label>Year 3 Objectives</label>
        <type>TextArea</type>
    </fields>
    <label>Business Plan</label>
    <listViews>
        <fullName>My_Business_Plans</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Business Plans</label>
    </listViews>
    <listViews>
        <fullName>My_Draft_Business_Plans</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>My Draft Business Plans</label>
    </listViews>
    <listViews>
        <fullName>My_Submitted_Business_Plans</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Submit</value>
        </filters>
        <label>My Submitted Business Plans</label>
    </listViews>
    <listViews>
        <fullName>X2016_All_Business_Plans</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Planning_Year__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>At_Risk_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Planning_Year__c</field>
            <operation>equals</operation>
            <value>FY2016</value>
        </filters>
        <label>2016 All Business Plans</label>
        <sharedTo>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_Construction_Business_Plans</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Planning_Year__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>At_Risk_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_SBU__c</field>
            <operation>contains</operation>
            <value>Construction</value>
        </filters>
        <filters>
            <field>Planning_Year__c</field>
            <operation>equals</operation>
            <value>FY2016</value>
        </filters>
        <label>2016 Construction Business Plans</label>
        <sharedTo>
            <role>Industrial_Sales_Manager</role>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_Consumer_Business_Plans</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Planning_Year__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>At_Risk_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_SBU__c</field>
            <operation>equals</operation>
            <value>Consumer</value>
        </filters>
        <filters>
            <field>Planning_Year__c</field>
            <operation>equals</operation>
            <value>FY2016</value>
        </filters>
        <label>2016 Consumer Business Plans</label>
        <sharedTo>
            <role>Consumer_Sales_Director</role>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_Industrial_Business_Plans</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Planning_Year__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>At_Risk_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_SBU__c</field>
            <operation>equals</operation>
            <value>Industrial</value>
        </filters>
        <filters>
            <field>Planning_Year__c</field>
            <operation>equals</operation>
            <value>FY2016</value>
        </filters>
        <label>2016 Industrial Business Plans</label>
        <sharedTo>
            <role>Industrial_Sales_Manager</role>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_Medical_Business_Plans</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Planning_Year__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>At_Risk_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_SBU__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <filters>
            <field>Planning_Year__c</field>
            <operation>equals</operation>
            <value>FY2016</value>
        </filters>
        <label>2016 Medical Business Plans</label>
        <sharedTo>
            <role>National_Account_Sales_Manager</role>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_PC_Business_Plans</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Planning_Year__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>At_Risk_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_SBU__c</field>
            <operation>contains</operation>
            <value>Personal Care</value>
        </filters>
        <filters>
            <field>Planning_Year__c</field>
            <operation>equals</operation>
            <value>FY2016</value>
        </filters>
        <label>2016 Personal Care Business Plans</label>
        <sharedTo>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_Packaging_Business_Plans</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Planning_Year__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>At_Risk_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_SBU__c</field>
            <operation>contains</operation>
            <value>Packaging</value>
        </filters>
        <filters>
            <field>Planning_Year__c</field>
            <operation>equals</operation>
            <value>FY2016</value>
        </filters>
        <label>2016 Packaging Business Plans</label>
        <sharedTo>
            <role>National_Account_Sales_Manager</role>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_Transportation_Business_Plans</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Planning_Year__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CurrentYearObjectives__c</columns>
        <columns>Critical_Business_Issues__c</columns>
        <columns>At_Risk_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_SBU__c</field>
            <operation>contains</operation>
            <value>Transportation</value>
        </filters>
        <filters>
            <field>Planning_Year__c</field>
            <operation>equals</operation>
            <value>FY2016</value>
        </filters>
        <label>2016 Transportation Business Plans</label>
        <sharedTo>
            <role>National_Account_Sales_Manager</role>
            <role>North_America_Executive</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Business Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>